update html and responsive

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -50,11 +50,20 @@
 	@import 'layout/main';
 	@import 'layout/footer';
 
+/* Intro */
+
+	#intro {
+		background: url("videos/bg-video.mp4"), url("../../videos/bg-video.mp4");
+		background-size: 256px 256px, cover;
+		background-attachment: fixed, fixed;
+		background-position: top left, bottom center;
+		background-repeat: repeat, no-repeat;
+	}
 
 /* One */
 
 	#one {
-		background: url('images/overlay.png'), url('../../images/one.jpg');
+		background: url("videos/bg2V.mp4"), url("../../videos/bg2V.mp4");
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
