--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,900");
+@import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@700&family=Open+Sans+Condensed:wght@300&display=swap');
 @import url("fontawesome-all.min.css");
-
-/*
-	Big Picture by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
-*/
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
@@ -133,7 +127,7 @@ input, select, textarea {
 				display: none;
 			}
 			body {
-				background: url('poster.jpg');
+				background: url("videos/bg-video.mp4");
 				background-size: cover;
 			}
 		}
@@ -531,11 +525,11 @@ input, select, textarea {
 /* Type */
 
 	body, input, textarea, select {
-		font-family: "Source Sans Pro", "sans-serif";
+		font-family: 'Fira Sans Condensed', sans-serif;
 		font-weight: 300;
 		font-size: 18pt;
 		line-height: 1.75em;
-		color: #39454b;
+		color: #252525;
 		letter-spacing: 0.025em;
 	}
 
@@ -1863,7 +1857,7 @@ input, select, textarea {
 		left: 0;
 		top: 0;
 		width: 100%;
-		background: rgba(255, 255, 255, 0.95);
+		background: rgba(26, 26, 26, 0.95);
 		height: 3em;
 		line-height: 3em;
 		box-shadow: 0 0 0.15em 0 rgba(0, 0, 0, 0.1);
@@ -1876,10 +1870,12 @@ input, select, textarea {
 			height: 3em;
 			line-height: 3em;
 			cursor: default;
+			color: white;
 		}
 
 			#header h1 a {
 				font-size: 1.25em;
+				
 			}
 
 		#header nav {
@@ -1908,6 +1904,7 @@ input, select, textarea {
 						line-height: 3em;
 						padding: 0 0.5em 0 0.5em;
 						outline: 0;
+						color: white;
 					}
 
 		@media screen and (max-width: 736px) {
@@ -2077,7 +2074,15 @@ input, select, textarea {
 			}
 
 			.main.style3.primary {
-				background: #ffffff;
+				background: #1f1f1f;
+			}
+
+			.main.style3.primary h2{
+				color: white;
+			}
+
+			.main.style3.primary p{
+				color: white;
 			}
 
 			.main.style3.secondary {
@@ -2210,7 +2215,7 @@ input, select, textarea {
 		margin: 0;
 		line-height: 1em;
 		padding: 1.5em;
-		background: #39454b;
+		background: rgba(26, 26, 26, 0.95);
 		color: rgba(185, 186, 187, 0.5);
 		overflow: hidden;
 	}
@@ -2278,7 +2283,7 @@ input, select, textarea {
 /* Intro */
 
 	#intro {
-		background: url("images/overlay.png"), url("../../images/intro.jpg");
+		background: url("videos/bg-video.mp4"), url("../../videos/bg-video.mp4");
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, bottom center;
