--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1863,6 +1863,7 @@ input, select, textarea {
 		box-shadow: 0 0 0.15em 0 rgba(0, 0, 0, 0.1);
 	}
 
+	
 		#header h1 {
 			position: absolute;
 			left: 1em;
@@ -1888,6 +1889,7 @@ input, select, textarea {
 
 			#header nav ul {
 				margin: 0;
+			
 			}
 
 				#header nav ul li {
@@ -1905,6 +1907,10 @@ input, select, textarea {
 						padding: 0 0.5em 0 0.5em;
 						outline: 0;
 						color: white;
+					}
+
+					#header nav ul li a:hover{
+						color:rgb(0,206,209)
 					}
 
 		@media screen and (max-width: 736px) {
